* tradcpp.c (rescan): Do not recognize directives when the # 	is indented.
	* gcc.dg/cpp/tr-direct.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35139 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-07-19  Zack Weinberg  <zack@wolery.cumb.org>
 
+	* tradcpp.c (rescan): Do not recognize directives when the #
+	is indented.
+
+2000-07-19  Zack Weinberg  <zack@wolery.cumb.org>
+
 	Implement C++ named operators.
 
 	* cpplib.h (TTYPE_TABLE): Move CPP_MIN and CPP_MAX into block
