use platform specific types in gnu_type_fix
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35143 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2000-07-20  Bruce Korb  <bkorb@gnu.org>
+
+	* fixincl/check.tpl: strip the platform specific types before testing
+	* fixincl/fixfixes.c(gnu_type_fix): use platform specific types
+	* fixincl/fixincl.tpl: use platform specific types
+	* fixincl/fixlib.h: include the platform specific types
+	* fixincl/inclhack.def(gnu_types): don't supply the types
+	* fixincl/fixincl.x: regen
+
 2000-07-19  Jim Wilson  <wilson@cygnus.com>
 
 	* config/ia64/ia64.h (HARD_REGNO_MODE_OK): Don't allow XFmode in
