--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-20  Zack Weinberg  <zack@wolery.cumb.org>
 
+	* lib/old-dejagnu.exp: Check for both "Internal compiler error"
+	and "Internal error".
+
 	* gcc.dg/cpp/20000625-2.c, gcc.dg/cpp/macsyntx.c: Update error
 	regexps. 
 	* gcc.dg/cpp/paste6.c: New test.
