--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-20  Tom Tromey  <tromey@cygnus.com>
 
+	* java/io/File.java (getParentFile): New method, from Classpath
+	via Oskar Liljeblad.
+
 	* java/util/Vector.java (remove(Object)): Implemented.
 
 2000-07-19  Jeff Sturm  <jeff.sturm@appnet.com>
