* scripts/classes.pl (scan): Print inner classes properly. 	* gcj/javaprims.h: Updated class list.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35151 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-20  Tom Tromey  <tromey@cygnus.com>
 
+	* scripts/classes.pl (scan): Print inner classes properly.
+	* gcj/javaprims.h: Updated class list.
+
 	* java/lang/natClassLoader.cc (_Jv_PrepareCompiledClass): Only
 	initialize String fields for interpreted classes.  Fixes bug
 	reported by Hans Boehm.
