* cp-tree.h: Use __FUNCTION__ not __PRETTY_FUNCTION__. 	Define my_friendly_assert and my_friendly_abort as macros 	which may call friendly_abort.  Prototype friendly abort, not 	my_friendly_abort or my_friendly_assert. 	* decl.c (signal_catch): Report the signal caught in the error 	message.  Call fatal directly. 	* typeck2.c (ack, my_friendly_assert): Delete. 	(my_friendly_abort): Rename to friendly_abort.  Expect file, 	line, and function parameters.  Report the abort code, then 	call fancy_abort.  Do not mask an abort if errors have 	already occurred.
	* g++.old-deja/g++.brendan/crash16.C,
	g++.old-deja/g++.brendan/parse3.C,
	g++.old-deja/g++.brendan/redecl1.C,
	g++.old-deja/g++.ns/template13.C,
	g++.old-deja/g++.other/decl4.C,
	g++.old-deja/g++.pt/spec14.C: Mark as crash test, expected to fail.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35169 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,17 @@
+2000-07-20  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cp-tree.h: Use __FUNCTION__ not __PRETTY_FUNCTION__.
+	Define my_friendly_assert and my_friendly_abort as macros
+	which may call friendly_abort.  Prototype friendly abort, not
+	my_friendly_abort or my_friendly_assert.
+	* decl.c (signal_catch): Report the signal caught in the error
+	message.  Call fatal directly.
+	* typeck2.c (ack, my_friendly_assert): Delete.
+	(my_friendly_abort): Rename to friendly_abort.  Expect file,
+	line, and function parameters.  Report the abort code, then
+	call fancy_abort.  Do not mask an abort if errors have
+	already occurred.
+
 2000-07-18  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* typeck.c (comp_target_parms): Remove obsolete parameter.
